# wagtail_subscriptions

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  TEST_GUIDE.md  publish.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_settings.py  test_urls.py  tox.ini
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: conf.py  index.rst  installation.md  installation.rst  quickstart.md
example_project/: db.sqlite3  manage.py  requirements.txt  test_basic.py
example_project/example_project/: __init__.py  settings.py  urls.py
example_project/templates/: base.html  pricing_cards_demo.html  pricing_demo.html
tests/: conftest.py
tests/models/: test_core.py
tests/payments/: test_stripe.py
tests/permissions/: test_decorators.py
tests/views/: test_subscription.py
wagtail_subscriptions/: __init__.py  admin.py  analytics.py  apps.py  context_processors.py  forms.py  settings.py  signals.py  urls.py  urls_admin.py  utils.py  wagtail_hooks.py
wagtail_subscriptions.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wagtail_subscriptions/admin/: __init__.py  features.py  subscription.py
wagtail_subscriptions/management/commands/: check_expired_subscriptions.py  create_sample_plans.py  setup_subscription_permissions.py  (+2 more)
wagtail_subscriptions/migrations/: 0001_initial.py  0002_invoice_payment_paymentmethod_subscriptiongroup_and_more.py
wagtail_subscriptions/models/: __init__.py  core.py  features.py  payments.py  permissions.py
wagtail_subscriptions/payments/: __init__.py  base.py  paddle.py  paypal.py  stripe.py
wagtail_subscriptions/permissions/: __init__.py  decorators.py  middleware.py  mixins.py  tenant_manager.py
wagtail_subscriptions/templatetags/: subscription_tags.py
wagtail_subscriptions/views/: __init__.py  admin.py  analytics.py  api.py  plan_features.py  pricing.py  subscription.py  webhooks.py
(+17 files in other folders)
